--- a/client/src/index.css
+++ b/client/src/index.css
@@ -230,10 +230,10 @@ a {
 .centerd {
   height: 100vh;
   width: 100%;
-
   display: flex;
   align-items: center;
-  justify-content: centers;
+  justify-content: center;
+  align-content: center;
 }
 
 /*=============== BREAKPOINTS ===============*/
