--- a/client/src/index.css
+++ b/client/src/index.css
@@ -757,6 +757,7 @@ a {
 }
 
 .form-input {
+  background-color: transparent;
   flex: 1;
   padding: 0.8rem;
   border: 2px solid #500a0a;
@@ -823,6 +824,52 @@ a {
     padding: 0.7rem 1.5rem;
     font-size: 0.9rem;
   }
+}
+
+/*=============== SCROLL TO TOP COMPONENT ===============*/
+
+.scroll-to-top {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  padding: 10px 15px;
+  font-size: 18px;
+  background-color: #5c0a0a; /* Button color */
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  opacity: 0.7;
+  transition: opacity 0.3s ease;
+}
+
+.scroll-to-top:hover {
+  opacity: 1;
+}
+
+/*=============== WHATSAAP COMPONENT ===============*/
+.whatsapp-button {
+  position: fixed;
+  bottom: 20px;
+  left: 20px;
+  width: 50px;
+  height: 50px;
+  background-color: #25d366;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+  transition: transform 0.3s;
+}
+
+.whatsapp-button:hover {
+  transform: scale(1.1);
+}
+
+.whatsapp-button img {
+  width: 28px;
+  height: 28px;
 }
 
 /*=============== FOOTER SECTION ===============*/
