--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1072,6 +1072,8 @@ a {
   }
 }
 
+/*=============== SINGLE PACEGORY PAGE ===============*/
+
 /*=============== BREAKPOINTS ===============*/
 /* For small devices */
 @media screen and (max-width: 340px) {
