--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1261,7 +1261,117 @@ a {
   color: #500a0a;
 }
 
-/*=============== BREAKPOINTS ===============*/
+/*=============== SIDEBAR COMPONENT ===============*/
+/* Sidebar Styles */
+.sidebar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 56px;
+  height: 100vh;
+  backdrop-filter: blur(16px) saturate(180%);
+  background-color: rgba(17, 25, 40, 0.75);
+  padding: 1.25rem 0.5rem 2rem;
+  transition: width 0.3s ease;
+  z-index: 100;
+}
+
+.sidebar--expanded {
+  width: 200px;
+}
+
+.sidebar__nav {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+}
+
+.sidebar__logo {
+  display: flex;
+  align-items: center;
+  margin-bottom: 2rem;
+  padding: 0 0.5rem;
+}
+
+.sidebar__logo-icon {
+  max-height: 3.4rem;
+  max-width: 3rem;
+}
+
+.sidebar__logo-text {
+  color: #ededed;
+  font-weight: 700;
+  margin-left: 0.5rem;
+}
+
+.sidebar__toggle {
+  position: absolute;
+  top: 1.1rem;
+  right: -0.6rem;
+  width: 18px;
+  height: 18px;
+  background-color: #500a0a;
+  border-radius: 50%;
+  font-size: 1.25rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  transition: transform 0.3s ease;
+}
+
+.sidebar__toggle.rotate {
+  transform: rotate(180deg);
+}
+
+.sidebar__list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.sidebar__link {
+  display: flex;
+  align-items: center;
+  padding: 0.65rem;
+  margin-bottom: 1rem;
+  border-radius: 0.5rem;
+  color: #ededed;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.sidebar__link:hover {
+  background-color: #500a0a;
+  color: #ffefef;
+}
+
+.sidebar__icon {
+  font-size: 1.5rem;
+}
+
+.sidebar__text {
+  font-weight: 700;
+  margin-left: 1rem;
+}
+
+.sidebar__link--active {
+  background-color: #500a0a;
+  color: #ffefef;
+}
+
+.sidebar__link--logout {
+  margin-top: auto;
+  cursor: pointer;
+  color: #ff4d4f;
+}
+
+.sidebar__link--logout:hover {
+  background-color: rgba(255, 77, 79, 0.2);
+  color: #ff4d4f;
+}
+
+/*=============== BREAKPOINxTS ===============*/
 /* For small devices */
 @media screen and (max-width: 340px) {
   .container {
