Modification to the admin side page heading to heading1

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1204,7 +1204,7 @@ a {
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
 }
 
-.heading1 {
+.login-bg-box .heading1 {
   margin-bottom: 1rem;
   font-size: 2rem;
   color: #ffffff;
