AddCategory page initialized and router linking created through button and Opr header mdification to the admin side pages

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1397,6 +1397,16 @@ a {
   align-items: center;
 }
 
+.dash-opr-head h1 {
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-content: start;
+}
+.dash-head {
+  text-decoration: underline;
+  color: #500a0a;
+}
 /* Adjust recent queries and admin users to take equal space */
 .recent-queries,
 .admin-users {
