Dash-Head beautifiation and responsiveness completed

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1405,11 +1405,24 @@ a {
   gap: 10px;
   flex-wrap: wrap;
 }
+
+.dash-head {
+  font-size: 2em;
+  color: #500a0a;
+  margin-bottom: 10px;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  flex-wrap: wrap;
+}
+
 .dash-head1 {
   text-decoration: underline;
   color: #500a0a;
   transition: color 0.3s ease-in-out;
 }
+
 .dash-head2 {
   color: #500a0a;
   transition: color 0.3s ease-in-out;
@@ -1420,16 +1433,6 @@ a {
   color: #500a0a;
 }
 
-.category-text {
-  font-size: 1.2rem;
-  color: #333;
-}
-
-@media (max-width: 768px) {
-  .arrow-icon {
-    font-size: 1.2rem;
-  }
-}
 
 /* Adjust recent queries and admin users to take equal space */
 .recent-queries,
