--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,5 @@
 /*=============== GOOGLE FONTS ===============*/
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Cormorant:ital,wght@0,300..700;1,300..700&display=swap");
 /*=============== BASE ===============*/
 * {
   box-sizing: border-box;
@@ -12,7 +11,7 @@ html {
 }
 
 ::placeholder {
-  font-family: "Montserrat", sans-serif;
+  font-family: "Cormorant", serif;
 }
 *::selection {
   background: #500a0a;
@@ -32,7 +31,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 body {
-  font-family: "Montserrat", sans-serif;
+  font-family: "Cormorant", serif;
   font-size: 0.938rem;
   background-color: #fff;
 }
@@ -1746,7 +1745,7 @@ a {
   }
   .nav__list {
     display: flex;
-    column-gap: 2rem;
+    column-gap: 1rem;
   }
   .nav__link {
     padding: 0.5rem;
