--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,5 @@
 /*=============== GOOGLE FONTS ===============*/
-@import url("https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Cormorant:ital,wght@0,300..700;1,300..700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Cormorant:ital,wght@0,300..700;1,300..700&family=Nanum+Myeongjo&display=swap");
 /*=============== BASE ===============*/
 * {
   box-sizing: border-box;
@@ -11,7 +11,7 @@ html {
 }
 
 ::placeholder {
-  font-family: "Cormorant", serif;
+  font-family: "Nanum Myeongjo", serif;
 }
 *::selection {
   background: #500a0a;
@@ -31,7 +31,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 body {
-  font-family: "Cormorant", serif;
+  font-family: "Nanum Myeongjo", serif;
   font-size: 0.938rem;
   background-color: #fff;
 }
@@ -86,6 +86,7 @@ a {
   align-items: center;
   column-gap: 0.25rem;
   font-weight: 600;
+  width: 150px;
   /* Color highlighting when pressed on mobile devices */
   /*-webkit-tap-highlight-color: transparent;*/
 }
